# research-paper-assistant

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
app/: __init__.py  config.py  db.py  factory.py  logging_utils.py  models.py  openai_client.py  repositories.py  routes.py  schemas.py
app/services/: agent.py  chat.py  paper_search_agent.py  papers.py  summary.py  tavily.py  vector_store.py
data/: assistant.db
static/: app.js  index.html  style.css
